--- a/css/shared/_typography.scss
+++ b/css/shared/_typography.scss
@@ -116,3 +116,26 @@ label{
 }
 //Custom checkbox
 
+.plus-icon{
+    display: inline-block;
+    width: 14px;
+    height: 16px;
+    margin-top: 7px;
+    float: right;
+    .plus-group{
+        position: relative;
+        margin: auto;
+        width: 9px;
+        height: 12px;
+        .vertical,.horizontal{
+            width: 9px;
+            height: 3px;
+            background-color: $color-secondary;
+        }
+        .vertical{
+            position: absolute;
+            transform: rotateZ(90deg);
+            @extend .transition-all;
+        }
+    }    
+}
