--- a/css/header.css
+++ b/css/header.css
@@ -180,9 +180,15 @@
   display: none;
 }
 
-@media (max-width: 991.98px) {
+@media (max-width: 1659.98px) {
   .header-container-desktop .header-nav .dropdown .dropdown-menu.show {
     display: block;
+  }
+}
+
+@media (max-width: 1659.98px) {
+  .header-container-desktop .header-nav .dropdown .dropdown-menu {
+    display: none;
   }
 }
 
@@ -215,10 +221,6 @@
   margin-right: 10px;
 }
 
-.header-container-desktop .header-nav .big-category-dropdown .big-category-item:hover .big-category-menu {
-  display: block;
-}
-
 .header-container-desktop .header-nav .big-category-dropdown .big-category-item {
   -webkit-transition: 0;
   transition: 0;
@@ -248,6 +250,14 @@
 
 .header-container-desktop .header-nav .big-category-dropdown .big-menu label:hover {
   color: #3d464d !important;
+}
+
+.header-container-desktop .header-nav .big-category-dropdown .big-menu .submenu-checkbox {
+  display: block;
+}
+
+.header-container-desktop .header-nav .big-category-dropdown .big-menu .submenu-checkbox:checked ~ .big-category-menu {
+  display: block;
 }
 
 .header-container-desktop .header-nav .big-category-dropdown .big-category-menu {
