--- a/css/header.scss
+++ b/css/header.scss
@@ -202,7 +202,7 @@
                 }
             }
             .big-category-item:hover .big-category-menu{
-                //display: block;
+                display: block;
             }
             .big-category-item{
                 transition: 0;
@@ -227,7 +227,7 @@
                     }
                 }
                 .submenu-checkbox{
-                    display: block;
+                    display: none;
                 }
                 .submenu-checkbox:checked ~ .big-category-menu{
                     display: block;
